--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,24 @@
     background-color: #0066CC;
     padding: 15px;
     text-align: center;
+}
+ #Logo, menu{
+    padding: 10px;
+}
 
+ #header a:link, #header a:visited{
+    color:white;
+    padding: 8px 12px ;
+}
+
+ #header a:hover{
+    color:#0066CC;
+    background-color:white;
+    text-decoration: none;
+
+}
+.white{
+    color: white;
 }
     
 
