--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     padding: 15px;
     text-align: center;
 }
- #Logo, menu{
+ #logo, #menu{
     padding: 10px;
 }
 
@@ -32,5 +32,23 @@
 .white{
     color: white;
 }
+/* 
+****** CONTENT ****** 
+*/
+#content{
+    width: 920px;
+    margin: 0 auto;
+    padding: 15px;
+}
+#posts{
+    width: 660px;
+    float: left;
+}
+.post{
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: justify;
+}
+
     
 
