CSS: formatação da data das postagens

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,12 @@
     margin-bottom: 20px;
     text-align: justify;
 }
-
+.data-post{
+    font-size: 13px;
+    border-bottom: 1px solid #0066CC;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+}
     
 
