--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,27 @@
     margin: 0;
     padding: 0;
 }
-    
+/* 
+****** FORMATAÇÕES GENERICAS ****** 
+*/
+body{
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: #C4C4C4;
+}
+h1{
+    color: #252525;
+    font-size: 40px;
+}
+h2{
+    color: #0066CC;
+}
+h3{
+    color: #565656;
+    background: #CCCCCC;
+    padding: 5px;
+}
+
 /* 
 ****** HEADER ****** 
 */
@@ -19,7 +39,7 @@
 }
 
  #header a:link, #header a:visited{
-    color:white;
+    color:#FFFFFF;
     padding: 8px 12px ;
 }
 
@@ -47,6 +67,7 @@
 .post{
     padding: 20px;
     margin-bottom: 20px;
+    background: #FFFFFF;
     text-align: justify;
 }
 .data-post{
@@ -56,5 +77,47 @@
     margin-bottom: 10px;
     display: block;
 }
-    
+.img-post{
+    width: 620px;
+}
+/* 
+****** RIGHT SIDE ****** 
+*/
+#right-side{
+    width: 240px ;
+    float:right;
+} 
+.content-right{
+    background:#FFFFFF;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.post-right{
+    font-size: 13px;
+    padding: 5px;
+    border-bottom: 1px dotted #CCCCCC;
 
+}
+
+/* 
+****** FORMATAÇÃO LINKS ****** 
+*/
+a{
+    text-decoration: none;
+}
+a:link, a :visited{
+    color: #0066CC;
+}
+a:hover{
+    text-decoration: underline;
+}
+/* 
+****** FOOTER ****** 
+*/
+#footer{
+    clear: both ;
+    text-align: center;
+    padding: 15px;
+    background: #FFFFFF;
+    color: #0066CC;
+}
